--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gulp-babel": "^8.0.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "js-yaml": "^3.13.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
